--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,3 +3,4 @@ encoding//zing/MapDi.py=utf-8
 encoding//zing/PTask.py=utf-8
 encoding//zing/Util.py=utf-8
 encoding/Runner.py=utf-8
+encoding/test.py=utf-8
