--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//webserver/mybean.py=utf-8
+encoding//webserver/mydao.py=utf-8
 encoding//webserver/routers.py=utf-8
 encoding//zing/MapDi.py=utf-8
 encoding//zing/PTask.py=utf-8
