确定采用多线程适配后台的方案

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//webserver/adapter.py=utf-8
 encoding//webserver/mybean.py=utf-8
 encoding//webserver/mydao.py=utf-8
 encoding//webserver/routers.py=utf-8
